kubernetes-starter/strichliste/manifests/01-backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: strichliste
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          ports:
            - containerPort: 9000
              name: fpm
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
          readinessProbe: &probe
            tcpSocket:
              port: fpm
          livenessProbe: *probe
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
          <<: &backend
            image: foosinn/strichliste-backend
            imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: strichliste
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 9000
    targetPort: fpm
